<resources>
    <string name="app_name">FinalAndroidProject</string>
    <string name="welcome">Welcome to my app</string>
    <string name="mobile_num">Mobile Num</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="confirm_password">confirm password</string>
    <string name="signup">signup</string>

    <!-- Error messages-->
    <string name="enter_email">Please Enter email</string>
    <string name="enter_password">Please Enter password</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="form_not_valid">Please fill correctly the form</string>

    <!-- Succeed messages-->
    <string name="acc_created">Account Created</string>
    <string name="home">Home</string>
    <string name="create_new_work">create new work</string>
    <string name="plan_work">plan work</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="rate_us">Rate Us</string>

    <!-- Menu Navigation-->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_name">Customer Name</string>
    <string name="exist_customer">exist customer</string>
    <string name="address">address</string>
    <string name="duration_of_time">duration of time</string>
    <string name="type_of_work">type of work</string>
    <string name="price">price</string>
    <string name="new_customer">new customer</string>
    <string name="street">street</string>
    <string name="city">city</string>
    <string name="comment">comment</string>
    <string name="confirm">confirm</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="number">number</string>
    <string name="create_new_customer">create new customer</string>
    <string name="customer_name_adapter">customer name:</string>
    <string name="address_adapter">address:</string>
    <string name="phone_adapter">phone:</string>
    <string name="duration_estimated_adapter">duration estimated:</string>
    <string name="save">save</string>
    <string name="logout">logout</string>

</resources>